--- a/code/index.html
+++ b/code/index.html
@@ -11,18 +11,18 @@
     <div class="title">Tic Tac Toe</div>  
     <div class="container">
         <div class="r1">
-            <button class="c11" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)"></button>
-            <button class="c12" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)"></button>
-            <button class="c13" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)"></button>
+            <button class="c11" onclick="set(this,1,1)" onmouseover="hover(this)" onmouseout="away(this)"></button>
+            <button class="c12" onclick="set(this,1,2)" onmouseover="hover(this)" onmouseout="away(this)"></button>
+            <button class="c13" onclick="set(this,1,3)" onmouseover="hover(this)" onmouseout="away(this)"></button>
     </div>
         <div class="r2">
-            <button class="c21" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)" ></button>
-            <button class="c22" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)"></button>
-            <button class="c23" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)"></button>
+            <button class="c21" onclick="set(this,2,1)" onmouseover="hover(this)" onmouseout="away(this)" ></button>
+            <button class="c22" onclick="set(this,2,2)" onmouseover="hover(this)" onmouseout="away(this)"></button>
+            <button class="c23" onclick="set(this,2,3)" onmouseover="hover(this)" onmouseout="away(this)"></button>
         </div><div class="r3">
-            <button class="c31" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)"></button>
-            <button class="c32" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)"></button>
-            <button class="c33" onclick="set(this)" onmouseover="hover(this)" onmouseout="away(this)"></button>
+            <button class="c31" onclick="set(this,3,1)" onmouseover="hover(this)" onmouseout="away(this)"></button>
+            <button class="c32" onclick="set(this,3,2)" onmouseover="hover(this)" onmouseout="away(this)"></button>
+            <button class="c33" onclick="set(this,3,3)" onmouseover="hover(this)" onmouseout="away(this)"></button>
         </div>
     </div>
     </body>
