--- a/code/index.html
+++ b/code/index.html
@@ -19,11 +19,13 @@
             <button class="c21" onclick="set(this,2,1)" onmouseover="hover(this)" onmouseout="away(this)" ></button>
             <button class="c22" onclick="set(this,2,2)" onmouseover="hover(this)" onmouseout="away(this)"></button>
             <button class="c23" onclick="set(this,2,3)" onmouseover="hover(this)" onmouseout="away(this)"></button>
-        </div><div class="r3">
+        </div>
+        <div class="r3">
             <button class="c31" onclick="set(this,3,1)" onmouseover="hover(this)" onmouseout="away(this)"></button>
             <button class="c32" onclick="set(this,3,2)" onmouseover="hover(this)" onmouseout="away(this)"></button>
             <button class="c33" onclick="set(this,3,3)" onmouseover="hover(this)" onmouseout="away(this)"></button>
         </div>
     </div>
+    <button class="reset" onclick="reset()">Reset Board</button>
     </body>
 </html>
